--- a/Tela Cadastro/cadastro-concluido.html
+++ b/Tela Cadastro/cadastro-concluido.html
@@ -1,14 +1,14 @@
  <html>
      <style>
  #concluido {
-     font: sans-serif;
+     font:bold 15px sans-serif;
  }
  </style>
 
  
  <div id="concluido">
 <p>
-    Seu cadastro foi concuido com sucesso!!
+    Seu cadastro foi concluido com sucesso!!
 </p>
 </div>
 </html>
