--- a/TelaLogin/Html/Mapif.html
+++ b/TelaLogin/Html/Mapif.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Tela - Login</title>
-    <link rel="stylesheet" type = "text/css" href="/Css/style.css">
+    <link rel="stylesheet" type = "text/css" href="../Css/style.css">
 </head>
 <body>
 
@@ -27,7 +27,7 @@
                     <button id="botao">Entrar</button>
                 </div>  
 
-            <img src="/Images/MAPIF.png" width="350px" height="150px">
+            <img src="../Images/MAPIF.png" width="350px" height="150px">
 
         </div>
 
