--- a/Tela Mapa/Html/mapa.html
+++ b/Tela Mapa/Html/mapa.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>TELA DO MAPA</title>
-    <link rel="stylesheet" type="text/css" href="/Css/style.css">
+    <link rel="stylesheet" type="text/css" href="../Css/style.css">
 </head>
 
 
