--- a/TelaPerguntaDoDia/Html/quiz.html
+++ b/TelaPerguntaDoDia/Html/quiz.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>PERGUNTA DO DIA!</title>
-    <link rel="stylesheet" type="text/css" href="/Css/style.css">
+    <link rel="stylesheet" type="text/css" href="../Css/style.css">
 </head>
 <body>
     <div class="tela">
@@ -26,7 +26,7 @@
                 <p id="progress">Confie no seu potencial!</p>
             </footer>
 
-            <img src="/Images/Assistente.png" width="700px" height="400px">
+            <img src="../Images/Assistente.png" width="700px" height="400px">
 
 
         </div>
