Update and rename Status to Status.html

--- a/Status.html
+++ b/Status.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <div align = "center"> 
+<link rel="stylesheet" type="text/css" href="Atualização_status_css.css">
 <h2>Status Matérias</h2> 
 <hr style="margin-bottom: 20px"> 
 <p>O Status é o lugar onde professores irão lançar comunicados de urgência ao seus alunos</p> 
