Update and rename Central to Central.html

--- a/Central.html
+++ b/Central.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <div align = "center"> 
+<link rel="stylesheet" type="text/css" href="Atualização_status_css.css">
 <p style="font-size:50px;" color="red;">Bem Vindo ao MapIf</p> 
 <img src="MAPIF.png" alt="Logo.mapIf" width="150" height="10" 
 <p>  
